fixed broken css in profile page

--- a/client/src/pages/signup/signup.css
+++ b/client/src/pages/signup/signup.css
@@ -1,7 +1,5 @@
 .homepage {
   width: 100%;
-  min-width: 1920px !important;
-  min-height: 1080px !important;
   height: 100%;
   background-color: #0addbf;
 }
